--- a/templates/home.html
+++ b/templates/home.html
@@ -8,9 +8,11 @@
 <body>
   <div class="wrap">
     <h1>Send a professional proposal in 60 seconds.</h1>
+    <div style="opacity:.6;font-size:12px;">DEPLOY MARKER HOME v3</div>
+
 
     <form method="POST" action="/generate">
-      <label>Your business name</label>
+      <label>Your business name bro</label>
       <input name="your_business" placeholder="e.g., Neo Electrical" />
 
       <label>Client name *</label>
