--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
     <div class="brand">
       <div class="brand-mark">GTJ</div>
       <div class="brand-text">
-        <div class="brand-name">Get The Job</div>
+        <div class="brand-name">Get The Job Buddy</div>
         <div class="brand-tag">Client-ready proposals that help win the job.</div>
       </div>
     </div>
